modified html title

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Travel Buddy - Login</title>
+    <title>Travel Gateway - Login</title>
   </head>
 
   <body>
