--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Travel Buddy - Register</title>
+    <title>Travel Gateway - Register</title>
   </head>
 
   <body>
