basic flight.html

--- a/templates/flight.html
+++ b/templates/flight.html
@@ -13,6 +13,24 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+    <h2>Flight！！！！</h2>
+    <form action="/flight/search_offers">
+
+    <input type="text" name = origin_code placeholder="Departing from?">
+  
+    <input type="text" name = destination_code placeholder="Where to go?" >
+    
+    <input type="text" name = departure_date placeholder= "When to leave?" >
+
+    <input type="text" name = departure_date placeholder="How many adults?"><br>
+    <input type="text" name = children placeholder="How many children?">
+  
+    <input type="text" name = infants placeholder="How many infants?">
+ 
+    <input type="text" name = travel_class placeholder="Which travel class?"><br>
+    <input type="submit" value="submit"> 
+    </form>
+
     <!--[if lt IE 7]>
       <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please
