--- a/templates/flight.html
+++ b/templates/flight.html
@@ -20,14 +20,21 @@
   
     <input type="text" name = destination_code placeholder="Where to go?" >
     
-    <input type="text" name = departure_date placeholder= "When to leave?" >
+    <input type="date" name = departure_date placeholder= "When to leave?" >
 
     <input type="text" name = departure_date placeholder="How many adults?"><br>
     <input type="text" name = children placeholder="How many children?">
   
     <input type="text" name = infants placeholder="How many infants?">
  
-    <input type="text" name = travel_class placeholder="Which travel class?"><br>
+    <input type="text" name = travel_class placeholder="Which travel class?">
+    <select name="travel_class" id="travel_class">
+      <option value="" disabled selected hidden>Which travel class</option>
+      <option value="First Class">First Class</option>
+      <option value="Business Class">Business Class</option>
+      <option value="Economy Class">Economy Class</option>
+    </select>
+    <br>
     <input type="submit" value="submit"> 
     </form>
 
