fix: search flights

--- a/templates/flight.html
+++ b/templates/flight.html
@@ -19,7 +19,16 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-
-    <script src="" async defer></script>
+    <form action="/flight/search_offers" method="GET">
+      <p>Origin</p>
+      <p>Destinat</p>
+      <p>Enter your desired departure date</p>
+      <input
+        class="departure"
+        type="date"
+        name="departureDate"
+        align="center"
+      />
+    </form>
   </body>
 </html>
