--- a/templates/flight.html
+++ b/templates/flight.html
@@ -17,9 +17,9 @@
     <h2>Your Journey Starts Here!</h2>
     <form action="/flight/search_offers">
     <label for="origin">Departing From?</label>
-    <input type="text" name = origin_code id="origin" class="locationInput">
+    <input type="text" name = origin_code id="origin">
     <label for="destination">Where to go?</label>
-    <input type="text" name = destination_code id="destination" class="locationInput">
+    <input type="text" name = destination_code id="destination">
     <label for="departure_date">When to Leave?</label>
     <input type="date" name = departure_date id="departure_date">
     <label for="adult">How Many Adults?</label>
@@ -55,7 +55,7 @@
         let inner = "";
         response = response["data"];
         console.log(response);
-        if (response.length !== 0 && $(".locationInput").val() !== "") {
+        if (response.length !== 0 && $("#origin").val() !== "") {
           removeElements();
           for (let airportInfo of response) {
             let listItem = document.createElement("li");
@@ -75,7 +75,7 @@
 
       function displayNames(value) {
         console.log(value);
-        $(".locationInput").val(value);
+        $("#origin").val(value);
         removeElements();
       }
       function removeElements() {
@@ -85,7 +85,8 @@
         });
       }
       function getResults() {
-        let city = $(".locationInput").val();
+        let city = $("#origin").val();
+        console.log(city);
         city = encodeURIComponent(city);
         let url = "/flight/select_place/" + city;
         if (request != null) {
@@ -98,7 +99,7 @@
         });
       }
       function setup() {
-        $(".locationInput").on("input", getResults);
+        $("#origin").on("input", getResults);
       }
       $("document").ready(setup);
     </script>
