--- a/templates/flight.html
+++ b/templates/flight.html
@@ -6,7 +6,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,33 +15,33 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <h2>Your Journey Starts Here!</h2>
     <form action="/flight/search_offers">
-    <label for="origin">Departing From?</label>
-    <input type="text" name = origin_code id="origin">
-    <ul id="origin_list"></ul>
-    <label for="destination">Where to go?</label>
-    <input type="text" name = destination_code id="destination">
-    <ul id="destination_list"></ul>
-    <label for="departure_date">When to Leave?</label>
-    <input type="date" name = departure_date id="departure_date">
-    <label for="adult">How Many Adults?</label>
-    <input type="text" name = adult id="adult"><br>
-    <label for="children">How Many Children</label>
-    <input type="text" name = children id="children">
-      <br>
-    <label for="infants">How Many Infants?</label>
-    <input type="text" name = infants id="infants">
-    <br>
- 
-    <!-- <input type="text" name = travel_class placeholder="Which travel class?"> -->
-    <label for="travel_class">Which Travel Class</label>
-    <select name="travel_class" id="travel_class">
-      <option value="" disabled selected hidden>Which travel class</option>
-      <option value="First Class">First Class</option>
-      <option value="Business Class">Business Class</option>
-      <option value="Economy Class">Economy Class</option>
-    </select>
-    <br>
-    <input type="submit" value="submit"> 
+      <label for="origin">Departing From?</label>
+      <input type="text" name="origin_code" id="origin" />
+      <ul id="origin_list"></ul>
+      <label for="destination">Where to go?</label>
+      <input type="text" name="destination_code" id="destination" />
+      <ul id="destination_list"></ul>
+      <label for="departure_date">When to Leave?</label>
+      <input type="date" name="departure_date" id="departure_date" />
+      <label for="adult">How Many Adults?</label>
+      <input type="text" name="adult" id="adult" /><br />
+      <label for="children">How Many Children</label>
+      <input type="text" name="children" id="children" />
+      <br />
+      <label for="infants">How Many Infants?</label>
+      <input type="text" name="infants" id="infants" />
+      <br />
+
+      <!-- <input type="text" name = travel_class placeholder="Which travel class?"> -->
+      <label for="travel_class">Which Travel Class</label>
+      <select name="travel_class" id="travel_class">
+        <option value="" disabled selected hidden>Which travel class</option>
+        <option value="First Class">First Class</option>
+        <option value="Business Class">Business Class</option>
+        <option value="Economy Class">Economy Class</option>
+      </select>
+      <br />
+      <input type="submit" value="submit" />
     </form>
 
     <!--[if lt IE 7]>
@@ -98,14 +97,16 @@
         }
       }
 
-      function displayOrign(value) {
+      function displayOrigin(value) {
         console.log(value);
         $("#origin").val(value);
         removeElements();
       }
       function removeElements() {
         let items = document.querySelectorAll(".list-items");
+        console.log(items);
         items.forEach((item) => {
+          console.log(item);
           item.remove();
         });
       }
