--- a/templates/flight_display.html
+++ b/templates/flight_display.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+    {% if not flight_offers %}
+    <h1>No flight available</h1>
+    {% else %}
     <h1 class="logo">Results</h1>
     <table>
       <tr>
@@ -37,5 +40,6 @@
       </tr>
       {% endfor %}
     </table>
+    {% endif %}
   </body>
 </html>
